# ramflow

./: .gitattributes  .gitignore  AGENTS.md  LICENSE-MIT  README.md
c/: Makefile  ramflow.c
docs/: philosophy.md
go/: go.mod  main.go
rust/: Cargo.toml
rust/src/: main.rs
