[package]
name = "ramflow"
version = "0.1.0"
edition = "2021"
description = "Simulated real-world RAM data movement tool for Windows and Linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Flashione/ramflow"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
humantime = "2.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
